<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".view.fragment.DangKyFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/liner_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/button_quay_lai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_14sdp"
                android:background="@drawable/background_edit_text"
                android:padding="@dimen/_6sdp"
                android:src="@drawable/ic_quay_lai" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:text="@string/ch_o_m_ng_n_ng_nh_p_b_t_u"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:textColor="@color/black"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/username" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:textColor="@color/black"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"

                        app:counterEnabled="true"
                        app:counterMaxLength="20"

                        app:helperText="Nhập mật khẩu"
                        app:helperTextEnabled="true"

                        app:helperTextTextColor="#FB8C00"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/nh_p_m_t_kh_u"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"

                        app:counterEnabled="true"
                        app:counterMaxLength="20"

                        app:helperText="Nhập lại mật khẩu"
                        app:helperTextEnabled="true"

                        app:helperTextTextColor="#FB8C00"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_nhaplai_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/nh_p_l_i_m_t_kh_u"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dang_ky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liner_01"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/background_button"
            android:text="Đăng ký"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_dang_ky"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_cauhoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/b_n_c_t_i_kho_n"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_dang_nhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/ng_nh_p_ngay"
                android:textColor="@color/xanh_lam"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>