<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".view.fragment.XacMinhOtpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/button_quay_lai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:background="@drawable/background_edit_text"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_quay_lai" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/otp_img" />

        <TextView
            android:id="@+id/tv_tieu_de_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/x_c_th_c_m_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/vui_long_nh_p_otp_v_a_g_i_n_s_i_n_tho_i" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edt_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kh_ng_nh_n_c_m_otp"
                android:textColor="@color/den_xam"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/edt_gui_lại"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:text="@string/g_i_l_i"
                android:textColor="@color/xanh_lam"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_xac_minh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/background_button"
            android:text="@string/x_c_minh"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/xanh_lam"
            android:visibility="visible" />


    </LinearLayout>


</androidx.core.widget.NestedScrollView>