<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"

    tools:context=".view.fragment.DangKyFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/liner_01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/button_quay_lai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_14sdp"
                        android:background="@drawable/background_edit_text"
                        android:padding="@dimen/_6sdp"
                        android:src="@drawable/ic_quay_lai" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_14sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:text="@string/ch_o_m_ng_n_ng_nh_p_b_t_u_02"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_22sdp"
                        android:textStyle="bold" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"

                        app:counterEnabled="true"
                        app:counterMaxLength="20"


                        app:helperTextTextColor="#FB8C00"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginEnd="@dimen/_14sdp"
                            android:background="@drawable/background_edit_text"
                            android:hint="@string/nh_p_m_t_kh_u"
                            android:inputType="textPassword" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_quen_mat_khau"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textStyle="italic"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:text="Quên mật khẩu?" />

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_dang_nhap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/liner_01"
                    android:layout_marginStart="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_14sdp"
                    android:background="@drawable/background_button"
                    android:text="Đăng nhập"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_below="@id/button_dang_nhap"
                    android:layout_centerHorizontal="true"
                    android:indeterminateTint="@color/xanh_lam"
                    android:visibility="gone" />


            </RelativeLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_cauhoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="Bạn chưa có tài khoản?"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_dang_ky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="Đăng ký ngay"
            android:textColor="@color/xanh_lam"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>